--- a/backend/env.template
+++ b/backend/env.template
@@ -9,6 +9,7 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 DATABASE_URL=postgresql://postgres:password@localhost:5432/amda
+SUPABASE_STORAGE_BUCKET=amda-media
 
 # Redis
 REDIS_URL=redis://localhost:6379
