--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,24 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# PWA Configuration
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+    Service-Worker-Allowed = "/"
+
+[[headers]]
+  for = "/workbox-*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/manifest.json"
+  [headers.values]
+    Cache-Control = "public, max-age=3600"
+    Content-Type = "application/manifest+json"
+
 # Headers for security
 [[headers]]
   for = "/*"
@@ -40,4 +58,7 @@
   for = "/*.svg"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+
+
 
