--- a/render.yaml
+++ b/render.yaml
@@ -2,21 +2,57 @@ services:
   - type: web
     name: amda-backend
     env: node
-    region: oregon  # ou frankfurt, singapore selon votre localisation
-    plan: starter  # ou 'free' pour commencer (non recommandé pour production)
-    buildCommand: cd backend && npm install && npm run build
-    startCommand: cd backend && npm start
-    healthCheckPath: /health
+    plan: starter
+    rootDir: backend
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 10000
-      # Les autres variables d'environnement doivent être ajoutées manuellement
-      # dans le dashboard Render pour des raisons de sécurité
-    # Disk persistant (uniquement pour plan Starter+)
-    # disk:
-    #   name: amda-sessions
-    #   mountPath: /opt/render/project/src/backend/persistent-disk
-    #   sizeGB: 1
-
+      - key: API_URL
+        sync: false
+      - key: FRONTEND_URL
+        sync: false
+      - key: SUPABASE_URL
+        sync: false
+      - key: SUPABASE_ANON_KEY
+        sync: false
+      - key: SUPABASE_SERVICE_ROLE_KEY
+        sync: false
+      - key: DATABASE_URL
+        sync: false
+      - key: SUPABASE_STORAGE_BUCKET
+        sync: false
+      - key: JWT_SECRET
+        sync: false
+      - key: JWT_EXPIRES_IN
+        value: 7d
+      - key: JWT_REFRESH_SECRET
+        sync: false
+      - key: JWT_REFRESH_EXPIRES_IN
+        value: 30d
+      - key: WHATSAPP_SESSION_PATH
+        value: ./sessions
+      - key: WHATSAPP_SESSION_TIMEOUT
+        value: 300000
+      - key: STRIPE_SECRET_KEY
+        sync: false
+      - key: STRIPE_PUBLISHABLE_KEY
+        sync: false
+      - key: STRIPE_WEBHOOK_SECRET
+        sync: false
+      - key: STRIPE_PRICE_ID_MONTHLY
+        sync: false
+      - key: STRIPE_PRICE_ID_YEARLY
+        sync: false
+      - key: LOG_LEVEL
+        value: info
+      # Redis (optional - can be empty if not using Redis)
+      - key: REDIS_URL
+        value: ""
+      - key: REDIS_HOST
+        value: ""
+      - key: REDIS_PORT
+        value: "6379"
